# bqflow

./: .gitignore  AUTHORS  BUILD  CONTRIBUTING.md  OWNERS  README.md  api.py  auth.py  bq.py  census.py  cm.py  colab.ipynb  dv.py  pyproject.toml  requirements.txt  run.py  schedule_drive.py  schedule_local.py  setup.py
bqflow/: auth.py  bq.py  bq_omg.py  cm.py  config.py  dv.py  run.py  run_omg.py  schedule_drive.py  schedule_local.py  startup.py
bqflow/task/: bigquery.py  cm_report.py  dataset.py  dv_report.py  dv_reports.py  ga_report.py  google_api.py  sa_report.py  sheets.py  smartsheet.py  url.py  vertexai_api.py  vision_api.py  workflow.py
bqflow/test/: cm_api.json  cm_reports.json  log.json  merge.json
bqflow/util/: __init__.py  auth.py  auth_storage.py  auth_wrapper.py  bigquery_api.py  cm_api.py  cm_schema.py  configuration.py  csv.py  data.py  discovery_to_bigquery.py  drive.py  dv_api.py  ga_api.py  gmail_api.py  google_api.py  log.py  misc.py  sa_api.py  secret_manager.py  sheets_api.py  storage_api.py  tests.py  vertexai_api.py
docs/criteria/: index.html  main.py
features/: environment.py  task_execution.feature
features/config/: tasks.json  tasks.yaml
features/steps/: task_execution.py
features/tasks/: hello_world.py
test/: cm_api.json  cm_reports.json  drive_csv.json  dv_api.json  dv_report.json  dv_reports.json  ga4_api.json  ga4_reports.json  gads_reports.json  log.json  merge.json  sa_api.json  sa_reports.json  tests.py  vertex.json
workflows/cm360/: cm_report_to_bq.json
workflows/dv360/: dv_report_to_bq.json
