###########################################################################
#
#  Copyright 2020 Google LLC
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
###########################################################################

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'bqflow'
version = '0.0.5'
description = 'BQFlow is a Google gTech built python framework for BigQuery to Google API ETL.'
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = 'Paul Kenjora', email = 'kenjora@google.com'}, {name = 'Ana Esqueda', email = 'anaesqueda@google.com'}]
keywords = ['Google', 'BigQuery', 'ETL', 'DV360', 'CM360', 'GA360', 'SA360', 'Google Ads', 'Adwords', 'BQFlow']
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
]
requires-python = ">=3.7"

[tool.setuptools.package-dir]
bqflow = "bqflow"
bqflow_scripts = "."

[project.urls]
Source = 'https://github.com/google/bqflow'
Blog = 'https://kenjora.medium.com/'

[project.scripts]
bqflow_run = 'bqflow_scripts.run:main'
bqflow_auth = 'bqflow_scripts.auth:main'
bqflow_cm = 'bqflow_scripts.cm:main'
bqflow_dv = 'bqflow_scripts.dv:main'
bqflow_bq = 'bqflow_scripts.bq:main'
bqflow_schedule_local = 'bqflow_scripts.schedule_local:main'
bqflow_schedule_drive = 'bqflow_scripts.schedule_drive:main'

[tool.poetry.dependencies]
google-api-python-client = "*"
google-auth = "*"
google-auth-oauthlib = "*"
google-auth-httplib2 = "*"
google-cloud-bigquery = "*"
psutil = "*"
python-dateutil = "*"
pytz = "*"
typing-extensions = "*"

[tool.pyink]
line-length = 80
pyink-indentation = 2
pyink-use-majority-quotes = true
